[package]
name = "my_client"
version = "0.1.0"
authors = ["Reed O'Brien <reed@reedobrien.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes      = "1"
mini-redis = "0.4"
tokio      = { version = "1", features = ["full"] }

